--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,7 @@
         .navbar-collapse.collapse#navbar
           %ul.nav.navbar-nav.navbar-right
             %li= link_to 'Home', root_path
+            %li= link_to 'My trips', trips_path
             %li= link_to 'Create a new trip', new_trip_path
             - if user_signed_in?
               %li= link_to 'Sign out', destroy_user_session_path, method: :delete
