[TR-3] Add multiple users to a trip
A user can add multiple emails to be invited a trip. Only valid and non-
duplicate emails are allowed, and the user is returned invalid emails.

A trip_invite_builder is created to be responsible for creating invites
from the input form.

--- a/app/views/trips/invites/new.html.haml
+++ b/app/views/trips/invites/new.html.haml
@@ -1,7 +1,15 @@
 .row
   .col-md-4
+    = link_to 'Back to trip', trip_path(@trip)
   .col-md-4
-    = simple_form_for @invite do |f|
-      = f.input :email
+    = simple_form_for @invite_builder, url: trip_invites_path, html: { method: :post } do |f|
+      = f.input :emails, placeholder: 'anne@example.com, joe@example.com', as: :text, required: false
+      = f.input :message, placeholder: 'Hi! I am organising a trip and it would be great to have you join!'
       .actions
         = f.submit 'Send invitations', class: 'btn btn-primary'
+  .col-md-4
+    %h3 Invitations
+    %ul
+      - @trip.invites.each do |invite|
+        - if invite.valid?
+          %li= invite.email
