[TR-7] RVSP for trip invite
The invited user can now respond with yes or no to the trip invite.
Each invite has its own token to ensure that uniqueness.

--- a/app/views/trips/invites/new.html.haml
+++ b/app/views/trips/invites/new.html.haml
@@ -12,4 +12,4 @@
     %ul
       - @trip.invites.each do |invite|
         - if invite.valid?
-          %li= invite.email
+          %li= invite.email + " Status: #{rvsp_state(invite)}"
