[TR-10] Add comments
A user can now comment on a destination suggestion. Implement a
polymorphic relationship, commentable, as other alternatives will be
commentable later on.

Not quite sure the namespace for comments.

--- a/app/views/trips/show.html.haml
+++ b/app/views/trips/show.html.haml
@@ -11,3 +11,6 @@
   .col-md-4
     - @trip.destinations.each do |destination|
       %p= destination.name + ": " + destination.description
+      - destination.comments.each do |comment|
+        %p "#{comment.author.username}: #{comment.text} at #{comment.added_at}"
+      = link_to "Add comment", new_destination_comment_path(destination)
