--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,9 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  */
-
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import "foundation_and_overrides";
 @import "utilities/_variables";
 @import "pages/_default_layout";
 @import "organisms/_navbar";
