[TR-15] Delete participant invite from trip
Only an organiser can delete the participant from the invite list.

Once a participant has been deleted, they are no longer a participant of
that trip and cannot access the page.

--- a/app/views/trips/invites/new.html.haml
+++ b/app/views/trips/invites/new.html.haml
@@ -13,3 +13,5 @@
       - @trip.invites.each do |invite|
         - if invite.valid?
           %li= invite.email + " Status: #{rvsp_state(invite)}"
+          - if can? :destroy, invite
+            = link_to 'Remove', invite_path(invite), method: :delete
