[TR-17] Creator can delete input
The creator of a comment, date option and destination can delete their
input. This option is not visible to the non-creator participant.

Creator is the trip participant, so that it is easier to isolate various
content per trip rather than per user. Creator id is added when the
date option and destination is created.

--- a/app/views/trips/_comments.html.haml
+++ b/app/views/trips/_comments.html.haml
@@ -1,4 +1,6 @@
 %p Comments:
 - commentable.comments.each do |comment|
   %p #{comment.author.username}: #{comment.text} at #{comment.added_at}
+  - if can? :destroy, comment
+    = link_to 'Remove', comment_path(comment), method: :delete
 = link_to "Add comment", new_comment_path(commentable_type: commentable_type, commentable_id: commentable.id)
