[TR-18] See trip invites
A user can see invitations to trips and respond with rvsp. A user can
also change the rvsp status.

Currently, nothing happens if a user responds with a 'declined' status.

--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -6,3 +6,11 @@
 
     - if can? :destroy, trip
       = link_to 'Remove', trip_path(trip), method: :delete
+
+%h3 My invites
+- @invites.each do |invite|
+  = invite.trip.name.to_s
+  Rvsp: #{rvsp_state(invite)}
+  = simple_form_for invite, url: invite_url(invite) do |f|
+    = f.input :rvsp, collection: [['Accept', true], ['Reject', false]], as: :radio_buttons
+    = f.submit :Respond
