--- a/app/views/trips/show.html.haml
+++ b/app/views/trips/show.html.haml
@@ -27,12 +27,4 @@
     .small-12.columns
       .frame
         %ul.slidee
-          - @trip.date_options.each do |date|
-            %li
-              .card
-                .card-section
-                  %h1= date.range
-                  - if can? :destroy, date
-                    = link_to 'Remove', date_option_path(date), method: :delete
-                  = render partial: "votes", locals: { votable: date, votable_type: 'trip/date_option', id_type: 'date_option' }
-                  = render partial: "comments", locals: { commentable: date, commentable_type: 'trip/date_option' }
+          = render partial: "options", locals: { date_options: @trip.date_options }
