--- a/app/views/trips/_destinations.html.haml
+++ b/app/views/trips/_destinations.html.haml
@@ -3,7 +3,7 @@
     .card
       .card-section
         %h1= destination.name
-        = destination.description
+        %p= destination.description
         - if can? :destroy, destination
           %br= link_to 'Remove', destination_path(destination), method: :delete
         = render partial: "votes", locals: { votable: destination, votable_type: 'trip/destination', id_type: 'destination' }
