Remove rvsp requirements
A user is now added as a participant when invited.

Todo:
- Refactor invite responsibility into the trip participant
  (so update the trip participant, rather than the invite)
- update invite and remove rvsp and responded at
- Give the user an option to remove themselves from the trip
  (but also add themselves in - make an active/inactive type I think)
- Organiser can set a participant to not coming, but does not delete the
  invite/trip participant. sets to 'inactive'

--- a/app/views/trips/invites/new.html.haml
+++ b/app/views/trips/invites/new.html.haml
@@ -8,10 +8,10 @@
       .actions
         = f.submit 'Send invitations', class: 'btn btn-primary'
   .col-md-4
-    %h3 Invitations
+    %h3 Participants
     %ul
       - @trip.invites.each do |invite|
         - if invite.valid?
-          %li= invite.email + " Status: #{rvsp_state(invite)}"
+          %li= invite.email
           - if can? :destroy, invite
             = link_to 'Remove', invite_path(invite), method: :delete
